Fixed compatibility issues